add new feature : graphical view

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -216,5 +216,4 @@ mail.smtp=mock
 %test.mail.smtp=mock
 
 
-google.key=AIzaSyALxct37VoDkvswBYOysbMiRpO5hjVFukg
-google.id.page=112440333946538821016
+google.info.path=/tmp/googleKey.properties
