Add +1 and shared informations in articles tab for each article. Fix issue regarding html caractere in article title

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -216,4 +216,4 @@ mail.smtp=mock
 %test.mail.smtp=mock
 
 
-google.info.path=/tmp/googleKey.properties
+google.info.path=/home/fsznajderman/Dev/googleKey.properties
